--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -259,22 +259,6 @@
       position: relative;
     }
 
-    /* 스코어카드 버튼 스타일 */
-    .card-link {
-      display: inline-block;
-      margin-top: 8px;
-      padding: 4px 10px;
-      background: #f1f3f5;
-      color: #0c2340;
-      text-decoration: none;
-      font-size: 11px;
-      font-weight: 700;
-      border-radius: 4px;
-      border: 1px solid #dee2e6;
-      transition: all 0.2s;
-    }
-    .card-link:hover { background: #e9ecef; border-color: #ced4da; }
-
     /* 모바일 대응 */
     @media (max-width: 768px) {
       .log-table thead { display: none; }
@@ -320,7 +304,7 @@
         </span>
         <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
       </div>
-      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 27, 2026</div>
+      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 28, 2026</div>
     </div>
 
 <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #806600; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
@@ -332,7 +316,7 @@
     </svg>
   </div>
   <p style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 700; line-height: 1.5;">
-    NOTICE: Round 3 is confirmed for Jan 28 at The Canyons Course. Round 4 has been canceled.
+    NOTICE: Round 3 is confirmed for Jan 28 at The Oaks Course. Round 4 has been canceled.
   </p>
 </div>
 
@@ -353,32 +337,6 @@
               <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
-
-<button type="button" 
-        onclick="gtag('event', 'view_scorecard', {'event_category': 'Engagement', 'event_label': 'Cancun Qualifying R1'}); document.getElementById('scorecard-modal').style.display='flex'"
-        style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
-  <div style="display: flex; align-items: center; justify-content: center; margin-right: 6px;">
-    <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M3 3v18h18"></path>
-      <path d="M18 9l-5 5-2-2-4 4"></path>
-    </svg>
-  </div>
-  <span style="letter-spacing: 0.3px;">VIEW SCORECARD</span>
-</button>
-
-              <div id="scorecard-modal" 
-                onclick="this.style.display='none'" 
-                style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; justify-content: center; align-items: center; padding: 20px; box-sizing: border-box;">
-                <div style="position: relative; max-width: 100%; max-height: 90%;">
-                  <div style="color: white; text-align: right; font-size: 12px; margin-bottom: 10px; font-weight: 600;">CLOSE [X]</div>
-                  <img src="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/qualify%201%20cancun.jpg" 
-                    style="max-width: 100%; max-height: 80vh; border-radius: 8px; box-shadow: 0 0 30px rgba(0,0,0,0.5); border: 3px solid white;">
-                  <div style="color: white; text-align: center; margin-top: 15px; font-size: 14px; font-weight: 700;">
-                    Cancun Collegiate Qualifying - Round 1 Scorecard
-                  </div>
-                </div>
-              </div>
-
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
@@ -411,7 +369,7 @@
           <tr style="background: rgba(34, 197, 94, 0.03);">
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px; color: #22c55e;">Jan 28, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course (Par 72)</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Oaks Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
                 <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#22c55e;">Scheduled</span></div>
