--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -416,35 +416,52 @@
     </div>
 </div>
 
-<div class="current-focus-list" style="max-width: 800px; margin: 0 auto 60px; font-family: 'Segoe UI', Roboto, sans-serif; display: flex; flex-direction: column; gap: 15px;">
+<div class="activity-report-section" style="max-width: 850px; margin: 0 auto 60px; font-family: 'Segoe UI', Roboto, Arial, sans-serif;">
     
-    <div style="background: #ffffff; border: 1px solid #edf2f7; border-left: 5px solid #806600; border-radius: 8px; padding: 20px 25px; box-shadow: 0 2px 8px rgba(0,0,0,0.03);">
-        <h3 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Final Schedule Update</h3>
-        <div style="color: #475569; font-size: 14px; line-height: 1.7;">
-            • Round 3: Jan 28 at The Oaks Course (Confirmed)<br>
-            • Round 4: Canceled due to schedule compression<br>
-            • Travel: Departure for Cancun on schedule (Friday)
+    <div style="background: #fdfdfd; border: 1px solid #e2e8f0; border-radius: 12px; padding: 30px; margin-bottom: 20px; position: relative; box-shadow: 0 4px 6px rgba(0,0,0,0.02);">
+        <div style="position: absolute; left: 0; top: 30px; bottom: 30px; width: 4px; background: #806600; border-radius: 0 2px 2px 0;"></div>
+        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px; padding-left: 10px;">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+            <h3 style="margin: 0; color: #806600; font-size: 18px; font-weight: 800; text-transform: uppercase;">Final Schedule Update</h3>
+        </div>
+        <div style="padding-left: 10px; color: #334155; font-size: 15px; line-height: 1.8;">
+            <ul style="margin: 0; padding-left: 20px; list-style-type: disc;">
+                <li><strong>Round 3:</strong> Jan 28 at The Oaks Course (Confirmed)</li>
+                <li><strong>Round 4:</strong> Officially <strong>Canceled</strong> due to schedule compression</li>
+                <li><strong>Travel Prep:</strong> Departure for Cancun on Friday remains on schedule</li>
+            </ul>
         </div>
     </div>
 
-    <div style="background: #ffffff; border: 1px solid #edf2f7; border-left: 5px solid #0c2340; border-radius: 8px; padding: 20px 25px; box-shadow: 0 2px 8px rgba(0,0,0,0.03);">
-        <h3 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Qualifying Feedback</h3>
-        <div style="color: #475569; font-size: 14px; line-height: 1.7;">
-            • Ball-Striking: Consistent performance maintained through R1-R2<br>
-            • Course Conditions: High-difficulty greenside challenges at The Oaks Course
+    <div style="background: #fdfdfd; border: 1px solid #e2e8f0; border-radius: 12px; padding: 30px; margin-bottom: 20px; position: relative; box-shadow: 0 4px 6px rgba(0,0,0,0.02);">
+        <div style="position: absolute; left: 0; top: 30px; bottom: 30px; width: 4px; background: #0c2340; border-radius: 0 2px 2px 0;"></div>
+        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px; padding-left: 10px;">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+            <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 800; text-transform: uppercase;">Qualifying Feedback</h3>
+        </div>
+        <div style="padding-left: 10px; color: #334155; font-size: 15px; line-height: 1.8;">
+            <p style="margin: 0;">
+                Initial performance during R1-R2 demonstrated improved ball-striking stability under competitive pressure. 
+                Current technical focus is on managing The Oaks course greens, which are being prepared for professional tournament standards.
+            </p>
         </div>
     </div>
 
-    <div style="background: #ffffff; border: 1px solid #edf2f7; border-left: 5px solid #cbd5e1; border-radius: 8px; padding: 20px 25px; box-shadow: 0 2px 8px rgba(0,0,0,0.03);">
-        <h3 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Team & Training Activity</h3>
-        <div style="color: #475569; font-size: 14px; line-height: 1.7;">
-            • Group sessions at PGA Superstore and indoor technical drills ongoing<br>
-            • Collaborative performance maintenance with teammates
+    <div style="background: #fdfdfd; border: 1px solid #e2e8f0; border-radius: 12px; padding: 30px; position: relative; box-shadow: 0 4px 6px rgba(0,0,0,0.02);">
+        <div style="position: absolute; left: 0; top: 30px; bottom: 30px; width: 4px; background: #94a3b8; border-radius: 0 2px 2px 0;"></div>
+        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px; padding-left: 10px;">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+            <h3 style="margin: 0; color: #64748b; font-size: 18px; font-weight: 800; text-transform: uppercase;">Team & Training</h3>
+        </div>
+        <div style="padding-left: 10px; color: #334155; font-size: 15px; line-height: 1.8;">
+            <p style="margin: 0;">
+                Collaborating with teammates to maintain performance rhythms. Utilizing PGA Superstore Trackman sessions and indoor technical drills to stabilize mid-to-long range scoring opportunities.
+            </p>
         </div>
     </div>
 
-    <p style="font-size: 11px; color: #94a3b8; text-align: right; margin-top: 5px; font-weight: 600; text-transform: uppercase;">
-        Last Updated: Jan 28, 2026
+    <p style="font-size: 11px; color: #94a3b8; text-align: center; margin-top: 30px; font-weight: 700; letter-spacing: 1px;">
+        LAST UPDATED: JAN 28, 2026
     </p>
 </div>
   
