--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -416,53 +416,51 @@
     </div>
 </div>
 
-<div class="activity-report-section" style="max-width: 850px; margin: 0 auto 60px; font-family: 'Segoe UI', Roboto, Arial, sans-serif;">
+<div class="focus-memo-board" style="max-width: 800px; margin: 0 auto 60px; background: #ffffff; border: 1px solid #e2e8f0; border-radius: 16px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); overflow: hidden; font-family: 'Segoe UI', Roboto, Helvetica, sans-serif;">
     
-    <div style="background: #fdfdfd; border: 1px solid #e2e8f0; border-radius: 12px; padding: 30px; margin-bottom: 20px; position: relative; box-shadow: 0 4px 6px rgba(0,0,0,0.02);">
-        <div style="position: absolute; left: 0; top: 30px; bottom: 30px; width: 4px; background: #806600; border-radius: 0 2px 2px 0;"></div>
-        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px; padding-left: 10px;">
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-            <h3 style="margin: 0; color: #806600; font-size: 18px; font-weight: 800; text-transform: uppercase;">Final Schedule Update</h3>
+    <div style="background: #f8fafc; padding: 25px 35px; border-bottom: 1px solid #edf2f7; display: flex; justify-content: space-between; align-items: center;">
+        <div>
+            <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; text-transform: uppercase; letter-spacing: 1px;">Activity Progress Report</h3>
+            <p style="margin: 5px 0 0 0; font-size: 12px; color: #64748b; font-weight: 600;">UTRGV Qualifying Period • Jan 2026</p>
         </div>
-        <div style="padding-left: 10px; color: #334155; font-size: 15px; line-height: 1.8;">
-            <ul style="margin: 0; padding-left: 20px; list-style-type: disc;">
-                <li><strong>Round 3:</strong> Jan 28 at The Oaks Course (Confirmed)</li>
-                <li><strong>Round 4:</strong> Officially <strong>Canceled</strong> due to schedule compression</li>
-                <li><strong>Travel Prep:</strong> Departure for Cancun on Friday remains on schedule</li>
-            </ul>
+        <div style="text-align: right;">
+            <span style="font-size: 11px; color: #94a3b8; font-weight: 800; display: block; text-transform: uppercase;">Status Update</span>
+            <span style="font-size: 14px; color: #0c2340; font-weight: 800;">JAN 28, 2026</span>
         </div>
     </div>
 
-    <div style="background: #fdfdfd; border: 1px solid #e2e8f0; border-radius: 12px; padding: 30px; margin-bottom: 20px; position: relative; box-shadow: 0 4px 6px rgba(0,0,0,0.02);">
-        <div style="position: absolute; left: 0; top: 30px; bottom: 30px; width: 4px; background: #0c2340; border-radius: 0 2px 2px 0;"></div>
-        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px; padding-left: 10px;">
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-            <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 800; text-transform: uppercase;">Qualifying Feedback</h3>
+    <div style="padding: 35px;">
+        
+        <div style="margin-bottom: 35px; position: relative; padding-left: 20px; border-left: 3px solid #806600;">
+            <h4 style="margin: 0 0 12px 0; color: #806600; font-size: 14px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.5px;">01. Final Schedule Adjustment</h4>
+            <div style="color: #334155; font-size: 15px; line-height: 1.8;">
+                • <strong>Round 3:</strong> Confirmed for Jan 28 at The Oaks Course. Ready for competition.<br>
+                • <strong>Round 4:</strong> Officially <strong>Canceled</strong> due to schedule compression.<br>
+                • <strong>Travel:</strong> Departure for Cancun on Friday remains on schedule.
+            </div>
         </div>
-        <div style="padding-left: 10px; color: #334155; font-size: 15px; line-height: 1.8;">
-            <p style="margin: 0;">
-                Initial performance during R1-R2 demonstrated improved ball-striking stability under competitive pressure. 
-                Current technical focus is on managing The Oaks course greens, which are being prepared for professional tournament standards.
-            </p>
+
+        <div style="margin-bottom: 35px; position: relative; padding-left: 20px; border-left: 3px solid #0c2340;">
+            <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 14px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.5px;">02. Qualifying Performance Feedback</h4>
+            <div style="color: #475569; font-size: 15px; line-height: 1.7;">
+                Consistent ball-striking maintained through R1-R2. Key focus shifted to managing fast-green conditions at The Oaks Course as it prepares for professional tournament standards.
+            </div>
         </div>
+
+        <div style="position: relative; padding-left: 20px; border-left: 3px solid #cbd5e1;">
+            <h4 style="margin: 0 0 12px 0; color: #64748b; font-size: 14px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.5px;">03. Team & Training Activity</h4>
+            <div style="color: #475569; font-size: 15px; line-height: 1.7;">
+                Collaborative training with teammates ongoing. Utilizing PGA Superstore Trackman sessions and indoor technical drills to stabilize mid-to-long range scoring rhythms during facility closures.
+            </div>
+        </div>
+
     </div>
 
-    <div style="background: #fdfdfd; border: 1px solid #e2e8f0; border-radius: 12px; padding: 30px; position: relative; box-shadow: 0 4px 6px rgba(0,0,0,0.02);">
-        <div style="position: absolute; left: 0; top: 30px; bottom: 30px; width: 4px; background: #94a3b8; border-radius: 0 2px 2px 0;"></div>
-        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px; padding-left: 10px;">
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-            <h3 style="margin: 0; color: #64748b; font-size: 18px; font-weight: 800; text-transform: uppercase;">Team & Training</h3>
-        </div>
-        <div style="padding-left: 10px; color: #334155; font-size: 15px; line-height: 1.8;">
-            <p style="margin: 0;">
-                Collaborating with teammates to maintain performance rhythms. Utilizing PGA Superstore Trackman sessions and indoor technical drills to stabilize mid-to-long range scoring opportunities.
-            </p>
-        </div>
+    <div style="background: #f8fafc; padding: 15px 35px; border-top: 1px solid #edf2f7; text-align: center;">
+        <span style="font-size: 10px; color: #cbd5e1; font-weight: 700; letter-spacing: 2px; text-transform: uppercase;">
+            Official Activity Record • Team FIRST
+        </span>
     </div>
-
-    <p style="font-size: 11px; color: #94a3b8; text-align: center; margin-top: 30px; font-weight: 700; letter-spacing: 1px;">
-        LAST UPDATED: JAN 28, 2026
-    </p>
 </div>
   
 
