--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -822,8 +822,11 @@
           <tr>
             <td>
               <div style="color: #999; font-weight: 700; font-size: 11px;">Dec 2025</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Patriot All-America Invitational</div>
+              <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="text-decoration: none; display: block;">
+                <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Patriot All-America Invitational</div>
+              </a>
               <div style="font-size: 11px; color: #c98a2e; font-weight: 700; letter-spacing: -0.2px;">WAGR Power: 806.3420 / Pts: 6.1052</div>
+              <div style="font-size: 11px; color: #475569; font-weight: 800; margin-top: 2px;">Head-to-Head: 42-5-37</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">71-73-72</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">216</span></div>
@@ -861,7 +864,9 @@
           <tr>
             <td>
               <div style="color: #999; font-weight: 700; font-size: 11px;">Oct 2025</div>
-              <div style="font-weight: 700; color: #333; font-size: 15px;">Trinity Forest Invitational</div>
+              <a href="https://scoreboard.clippd.com/tournaments/239449/scoring/player" target="_blank" style="text-decoration: none;">
+                <div style="font-weight: 700; color: #333; font-size: 15px;">Trinity Forest Invitational</div>
+              </a>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 360.1597 / Pts: 3.1971</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">75-73-74</span></div>
@@ -878,7 +883,9 @@
           <tr style="background: #fcfdfe;">
             <td>
               <div style="color: #999; font-weight: 700; font-size: 11px;">Oct 2025</div>
-              <div style="font-weight: 700; color: #333; font-size: 15px;">Badger Invitational</div>
+              <a href="https://scoreboard.clippd.com/tournaments/236150/scoring/player" target="_blank" style="text-decoration: none;">
+                <div style="font-weight: 700; color: #333; font-size: 15px;">Badger Invitational</div>
+              </a>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 129.0694 / Pts: 3.3178</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71</span>-71-76</span></div>
@@ -895,7 +902,9 @@
           <tr>
             <td>
               <div style="color: #999; font-weight: 700; font-size: 11px;">Sep 2025</div>
-              <div style="font-weight: 700; color: #333; font-size: 15px;">Highlands Invitational</div>
+              <a href="https://scoreboard.clippd.com/tournaments/239590/scoring/player" target="_blank" style="text-decoration: none;">
+                <div style="font-weight: 700; color: #333; font-size: 15px;">Highlands Invitational</div>
+              </a>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 232.6656 / Pts: 4.9097</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">74-<span style="color:#e53935;">71</span>-70</span></div>
@@ -912,7 +921,9 @@
           <tr style="background: rgba(12, 35, 64, 0.04);">
             <td>
               <div style="color: #0c2340; font-weight: 700; font-size: 11px;">Sep 2025</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Argent Financial Invitational</div>
+              <a href="https://scoreboard.clippd.com/tournaments/239222/scoring/player" target="_blank" style="text-decoration: none;">
+                <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Argent Financial Invitational</div>
+              </a>
               <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 230.8799 / Pts: 5.3735</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value" style="color:#e53935;">70-70-69</span></div>
