--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1123,20 +1123,32 @@
       
       <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
-        <span style="font-size: 24px; font-weight: 900; color: #94a3b8;">TBD</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">237-96-11</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 70.1%</div>
         <div style="display: inline-block; font-size: 13px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">
-          STATUS: Awaiting Spring Opener
+          STATUS: Fall Finalized / Spring Update Pending
         </div>
       </div>
       
       <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency</span>
-        <span style="font-size: 24px; font-weight: 900; color: #94a3b8;">CALCULATING</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">100% Counting Score</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Every Round Contributed</div>
         <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">
-          METRIC: Spring Data Collection
+          METRIC: Spring Data Collection In Progress
         </div>
       </div>
+
     </div>
+
+    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px;">
+      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">
+        Last Updated: Jan 2026 (Pre-Spring Season)
+      </span>
+    </div>
+
+  </div>
+</div>
 
     <div style="font-size: 15px; color: #334155; line-height: 1.8;">
       <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Spring Season Objectives:</b>
