--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1019,6 +1019,7 @@
       <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; word-break: break-word;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Academic Discipline</span>
         <span style="font-size: 24px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
+        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Fall 2025 Semester</div>
         <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 8px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 2px 12px; border-radius: 20px;">
           METRIC: Fall 2025 Finalized
         </div>
@@ -1026,28 +1027,7 @@
 
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-bottom: 35px;">
-      
-      <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; word-break: break-word;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Head-to-Head Record</span>
-        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">237-96-11</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Win Rate: 70.1%</div>
-        <div style="display: inline-block; font-size: 12px; color: #806600; margin-top: 8px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 2px 12px; border-radius: 20px;">
-          STATUS: Awaiting Spring Opener
-        </div>
-      </div>
-
-      <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; word-break: break-word;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Scoring Consistency</span>
-        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">100% Counting Score</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Every Round Contributed</div>
-        <div style="display: inline-block; font-size: 12px; color: #2b6cb0; margin-top: 8px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 2px 12px; border-radius: 20px;">
-          METRIC: Spring Data Collection
-        </div>
-      </div>
-
-    </div>
-
+ 
     <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px;">
       <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">
         Last Updated: Jan 2026 (Pre-Spring Season)
@@ -1148,26 +1128,26 @@
     </div>
 
   </div>
-</div>
 
+  <div style="margin-top: 40px;">
     <div style="font-size: 15px; color: #334155; line-height: 1.8;">
       <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Spring Season Objectives:</b>
 
-<div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
-  <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <circle cx="12" cy="12" r="10"></circle>
-      <line x1="22" y1="12" x2="18" y2="12"></line>
-      <line x1="6" y1="12" x2="2" y2="12"></line>
-      <line x1="12" y1="6" x2="12" y2="2"></line>
-      <line x1="12" y1="22" x2="12" y2="18"></line>
-    </svg>
-    Strategic Course Management
-  </h4>
-  <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
-    Current focus is the <b>seamless integration of Bryan Gathright’s technical directives</b> into competitive decision-making. High priority is placed on internalizing swing-plane adjustments to <b>minimize unforced errors</b> and improve proximity metrics on Par-4 holes for stabilized scoring.
-  </p>
-</div>
+      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+        <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"></circle>
+            <line x1="22" y1="12" x2="18" y2="12"></line>
+            <line x1="6" y1="12" x2="2" y2="12"></line>
+            <line x1="12" y1="6" x2="12" y2="2"></line>
+            <line x1="12" y1="22" x2="12" y2="18"></line>
+          </svg>
+          Strategic Course Management
+        </h4>
+        <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
+          Current focus is the <b>seamless integration of Bryan Gathright’s technical directives</b> into competitive decision-making. High priority is placed on internalizing swing-plane adjustments to <b>minimize unforced errors</b> and improve proximity metrics on Par-4 holes for stabilized scoring.
+        </p>
+      </div>
 
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #546e7a; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #455a64; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
@@ -1179,19 +1159,20 @@
         </p>
       </div>
 
-<div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
-  <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-      <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-    </svg>
-    Statistical Progression & Learning Curve
-  </h4>
-  <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
-    As a freshman, emphasis is placed on leveraging <b>post-event analytics</b> to identify developmental benchmarks. <b>Strokes Gained (SG)</b> and field-adjusted metrics are systematically reviewed to align training intensity with competitive requirements, ensuring a consistent seasonal progression.
-  </p>
-</div>
+      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+        <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+          </svg>
+          Statistical Progression & Learning Curve
+        </h4>
+        <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
+          As a freshman, emphasis is placed on leveraging <b>post-event analytics</b> to identify developmental benchmarks. <b>Strokes Gained (SG)</b> and field-adjusted metrics are systematically reviewed to align training intensity with competitive requirements, ensuring a consistent seasonal progression.
+        </p>
+      </div>
 
+    </div>
   </div>
 </div>
 
