--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -936,8 +936,9 @@
   </div>
   
   
-<div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
+<div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  
+  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
     
     <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 25px;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
@@ -978,108 +979,7 @@
         Following the integration of <b>Bryan Gathright’s technical protocols</b>, longitudinal data on swing mechanics and competitive scoring will be tracked throughout the Spring season. Preparation for <b>NCAA Regional qualification</b> remains the primary performance target.
       </p>
     </div>
-  </div>
-</div>
 
-<div class="roster-standings-section" style="max-width: 900px; margin: 0 auto 60px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="margin-bottom: 25px;">
-    <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
-      UTSA TEAM ROSTER STANDINGS 
-      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
-    </h3>
-  </div>
-
-  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
-    <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 35px;">
-      <div style="flex: 1; min-width: 200px; padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Team Rank (Avg)</span>
-        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">#1 (72.0)</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Scoreboard Adj: 71.5</div>
-        <div style="display: inline-block; font-size: 12px; color: #806600; margin-top: 8px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 2px 12px; border-radius: 20px;">STATUS: Fall Cumulative</div>
-      </div>
-      
-      <div style="flex: 1; min-width: 200px; padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Scoring Power</span>
-        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">7 Under Par</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Out of 12 Rounds</div>
-        <div style="display: inline-block; font-size: 12px; color: #2b6cb0; margin-top: 8px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 2px 12px; border-radius: 20px;">STATUS: Spring Qualifiers</div>
-      </div>
-
-      <div style="flex: 1; min-width: 200px; padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Academic Discipline</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Fall 2025 Semester</div>
-        <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 8px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 2px 12px; border-radius: 20px;">METRIC: Fall Finalized</div>
-      </div>
-    </div>
-
-    <div style="display: flex; flex-wrap: wrap; gap: 25px; margin-bottom: 30px;">
-      <div style="flex: 1; min-width: 280px; border-top: 1px solid #f1f1f1; padding-top: 20px;">
-        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle></svg>
-          Competitive Lineup & Team Contribution
-        </h4>
-        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Focusing on <b>maximizing scoring contribution</b> for the UTSA Travel Squad. Current metrics are prioritized to maintain competitive consistency within the lineup and support team-scoring objectives for the 2026 Spring season.
-        </p>
-      </div>
-      <div style="flex: 1; min-width: 280px; border-top: 1px solid #f1f1f1; padding-top: 20px;">
-        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-          Post-Round Analysis & Training Alignment
-        </h4>
-        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Competitive logs are maintained to <b>identify performance gaps</b> and define technical objectives. Each round’s data is used to <b>calibrate practice protocols</b>, ensuring systematic improvement throughout the Spring season.
-        </p>
-      </div>
-    </div>
-    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px;">
-      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 2026</span>
-    </div>
-  </div>
-</div>
-
-<div class="advanced-analysis-section" style="max-width: 900px; margin: 0 auto 60px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="margin-bottom: 25px;">
-    <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
-      ADVANCED COMPETITIVE ANALYSIS 
-      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
-    </h3>
-  </div>
-
-  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
-    <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 35px;">
-      <div style="flex: 1; min-width: 240px; padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">237-96-11</span>
-        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 70.1%</div>
-        <div style="display: inline-block; font-size: 13px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: Fall Finalized</div>
-      </div>
-      <div style="flex: 1; min-width: 240px; padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency</span>
-        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">100% Counting Score</span>
-        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Every Round Contributed</div>
-        <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">METRIC: In Progress</div>
-      </div>
-    </div>
-
-    <div style="margin-top: 40px;">
-      <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Spring Season Objectives:</b>
-      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border: 1px solid #f1f5f9; border-top-width: 6px;">
-        <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path></svg>
-          Statistical Progression & Learning Curve
-        </h4>
-        <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
-          As a freshman, emphasis is placed on leveraging <b>post-event analytics</b> to identify developmental benchmarks. <b>Strokes Gained (SG)</b> and field-adjusted metrics are systematically reviewed to align training intensity with competitive requirements.
-        </p>
-      </div>
-    </div>
-    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 20px;">
-      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 2026</span>
-    </div>
   </div>
 </div>
 
