--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -978,15 +978,15 @@
 </div>
   
 
-<div class="roster-standings-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="margin-bottom: 25px;">
+<div class="roster-standings-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="margin-bottom: 25px; padding: 0 15px;">
     <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
       UTSA TEAM ROSTER STANDINGS 
       <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
     </h3>
   </div>
-  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
+  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 35px;">
       <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Team Rank (Avg)</span>
@@ -1051,15 +1051,17 @@
   </div>
 </div>
 
-<div class="advanced-analysis-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="margin-bottom: 25px;">
+  
+
+<div class="advanced-analysis-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="margin-bottom: 25px; padding: 0 15px;">
     <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
       ADVANCED COMPETITIVE ANALYSIS 
       <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
     </h3>
   </div>
-  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
+  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 35px;">
       <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
@@ -1112,18 +1114,18 @@
 
   
 
-  <div class="tech-gear-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+ <div class="tech-gear-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div style="margin-bottom: 50px;">
-<h3 style="font-size: 16px; color: #0c2340; margin-bottom: 20px; border-left: 5px solid #0c2340; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
-  <div style="display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #e2e8f0;">
-    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M23 7l-7 5 7 5V7z"></path>
-      <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
-    </svg>
-  </div>
-  <span>TECHNICAL FOOTAGE</span>
-</h3>
+  <div style="margin-bottom: 50px; padding: 0 15px;">
+    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 20px; border-left: 5px solid #0c2340; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
+      <div style="display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #e2e8f0;">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M23 7l-7 5 7 5V7z"></path>
+          <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+        </svg>
+      </div>
+      <span>TECHNICAL FOOTAGE</span>
+    </h3>
     <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; width: 100%;">
       <div style="border: 1px solid #e2e8f0; border-radius: 12px; overflow: hidden; background: #ffffff; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
         <div style="background: #0c2340; color: white; padding: 8px 0; font-size: 11px; font-weight: 800; text-align: center; letter-spacing: 1px;">DRIVER</div>
@@ -1152,20 +1154,20 @@
     </div>
   </div>
 
-  <div style="margin-bottom: 40px;">
-<h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
-  <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #f1e6d0;">
-    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M6 12h9"></path>
-      <path d="M11 7l-2 2-2-2"></path>
-      <path d="M9 9v10"></path>
-      <rect x="5" y="3" width="14" height="18" rx="2"></rect>
-      <path d="M9 3v4"></path>
-      <path d="M15 3v4"></path>
-    </svg>
-  </div>
-  <span>WHAT'S IN THE BAG</span>
-</h3>
+  <div style="margin-bottom: 40px; padding: 0 15px;">
+    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
+      <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #f1e6d0;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M6 12h9"></path>
+          <path d="M11 7l-2 2-2-2"></path>
+          <path d="M9 9v10"></path>
+          <rect x="5" y="3" width="14" height="18" rx="2"></rect>
+          <path d="M9 3v4"></path>
+          <path d="M15 3v4"></path>
+        </svg>
+      </div>
+      <span>WHAT'S IN THE BAG</span>
+    </h3>
     
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px; margin-bottom: 12px;">
       <div style="background: #0c2340; color: white; padding: 20px; border-radius: 12px; display: flex; flex-direction: column; justify-content: space-between; min-height: 120px; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.15);">
@@ -1231,8 +1233,8 @@
 
   
 
-<div class="gallery-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 15px;">
+<div class="gallery-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 15px; margin-left: 15px;">
     <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #f1e6d0; margin-right: 12px;">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
         <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
@@ -1243,7 +1245,7 @@
     <h3 style="margin: 0; color: #0c2340; font-size: 16px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">JOURNEY IN PHOTOS</h3>
   </div>
 
-  <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding-bottom: 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
+  <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding: 0 15px 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
     <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
@@ -1335,7 +1337,7 @@
     }
   </script>
 
-  <div style="text-align: center; padding-top: 20px; margin-top: 40px; border-top: 1px solid #f1f1f1;">
+  <div style="text-align: center; padding-top: 20px; margin: 40px 15px 0; border-top: 1px solid #f1f1f1;">
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
       Performance Data<br>
       Official Credentials • Joshua Hong
