--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -450,7 +450,7 @@
                 • Status: Travel Squad Confirmed<br>
                 • Destination: Cancun, Mexico<br>
                 • Departure: Jan 30 (Fri)<br>
-                • Goal: Maintain Rank 1 seed
+                • Goal: Peak performance for season opener
             </p>
         </div>
 
