--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </div>
         </div>
         <a href="ncaa-stats.html" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px;">
-            VIEW FULL SCORECARD &rarr;
+            VIEW FINAL STATUS  &rarr;
         </a>
     </div>
 </div>
