--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -347,7 +347,7 @@
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value over-par">76</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value over-par">+4</span></div>
-                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#e74c3c;">6</span></div>
+                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#e74c3c;">6th</span></div>
               </div>
             </td>
             <td class="hide-mobile"><span class="over-par">76</span></td>
