--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -292,7 +292,7 @@
   <div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">FINAL WINNER</span>
+        <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">FINAL RESULT</span>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate Qualifying</h2>
       </div>
       <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 28, 2026</div>
@@ -347,13 +347,13 @@
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value over-par">76</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value over-par">+4</span></div>
-                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#e74c3c;">6th</span></div>
+                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#e74c3c;">6</span></div>
               </div>
             </td>
             <td class="hide-mobile"><span class="over-par">76</span></td>
             <td class="hide-mobile"><span class="over-par">+4</span></td>
             <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Final</td>
-            <td class="hide-mobile" style="font-weight: 800; color: #e74c3c;">1</td>
+            <td class="hide-mobile" style="font-weight: 800; color: #e74c3c;">6</td>
           </tr>
         </tbody>
       </table>
