--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -347,13 +347,13 @@
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value over-par">76</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value over-par">+4</span></div>
-                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#e74c3c;">6</span></div>
+                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#0c2340;">6</span></div>
               </div>
             </td>
             <td class="hide-mobile"><span class="over-par">76</span></td>
             <td class="hide-mobile"><span class="over-par">+4</span></td>
             <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Final</td>
-            <td class="hide-mobile" style="font-weight: 800; color: #e74c3c;">6</td>
+            <td class="hide-mobile" style="font-weight: 800; color: #0c2340;">6</td>
           </tr>
         </tbody>
       </table>
