--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -426,8 +426,8 @@
                 <div>
                     <h4 style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 900; text-transform: uppercase;">R3 Technical Feedback</h4>
                     <p style="margin: 5px 0 0 0; font-size: 13.5px; color: #475569; line-height: 1.6;">
-                        <strong>Putting:</strong> 3-putts recorded 3 times. Urgent recalibration of distance control and green reading required. <br>
-                        <strong>Long Game:</strong> Unstable driver dispersion due to loss of competitive rhythm in cold conditions.
+                        <strong>Status::</strong> R3 provided a data point for managing aggressive lines in high-margin scenarios. Specific parameters for recalibration identified. <br>
+                        <strong>Focus:</strong> Adjusting physical feel post-hiatus. Technical verification for Spring season opening.
                     </p>
                 </div>
             </div>
